--- a/giaovien.html
+++ b/giaovien.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="row header px-0 mx-0">
+    <div class="row g-0 header px-0 mx-0">
         <div class="col-3">
             <div class="logo">
                 <img class="logo_img" src="./images/logo.png" alt="">
@@ -30,7 +30,7 @@
         </div>
         <div class="col-9 px-0">
             <div class="menu">
-                <div class="row px-0">
+                <div class="row g-0 px-0">
                     <div class="col-lg-9 px-0">
                         <div class="toggle">
                             <i class="fa-solid fa-bars"></i>
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="container-fluid px-0">
-        <div class="row">
+        <div class="row g-0">
             <div class="col-lg-7">
                 <div class="polygon ">
                 </div>
@@ -72,14 +72,14 @@
                 </div>
                 <div class="content ">
                     <img class="Group41_gv" src="./images/Group41_about.svg" />
-                    <p class="text-start">
+                    <p class="text-start content_gv">
                         Thạc sỹ Quản lí giáo dục, Thạc sỹ Vật lý - Toán học <br>
                         38 năm kinh nghiệm giảng dạy tại Đại học Quốc gia Hà Nội <br>
                         28 năm lãnh đạo trường THPT Phan Bội Châu. <br>
                         CTV Viện liên hợp nghiên cứu hạt nhân Dubna - Liên Xô cũ (năm1888-1992). <br>
                         CTV Viện Hàn lâm khoa học Warszawa-Ba Lan (năm 1992-1994).
                     </p>
-                    <p class="text-start">
+                    <p class="text-start content_gv">
                         Với những cống hiến nhiều năm trong ngành giáo dục, ông được Bộ trưởng Bộ Giáo dục và Đào tạo
                         trao kỷ niệm chương vì sự nghiệp Giáo dục của đất nước. Được Giám đốc Đại học Quốc gia Hà Nội
                         trao kỷ niệm chương vì sự nghiệp phát triển Đại học Quốc gia Hà Nội.
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <div class="row b1">
+        <div class="row g-0 b1">
             <div class="col-lg-12">
                 <div class="r1">
                     <img class="Group_about" src="./images/Group_about.svg" />
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row g-0">
             <div class="col-lg-6 rps_gv">
 
                 <div class="img_doingu_2"></div>
@@ -121,7 +121,7 @@
                     <h2 class="title_3_gv "> CHỦ TỊCH HDQT - HIỆU TRƯỞNG </h2>
                 </div>
                 <div class="content content_gv">
-                    <p class="content_gv_1">
+                    <p class="content_gv_1 content_gv">
                         Thạc sỹ Quản lí giáo dục <br>
                         Cử nhân Vật lý <br>
                         40 năm trực tiếp giảng dạy <br>
@@ -136,7 +136,7 @@
                 </div>
             </div>
         </div>
-        <div class="row b2">
+        <div class="row g-0 b2">
             <div class="col-lg-12">
                 <div class="c2">
                     <img class="Ellipse_tron_r" src="./images/Ellipse_tron_r.svg" />
@@ -179,105 +179,78 @@
             <img class="Polygon17" src="./images/Polygon17.svg" />
             <img class="Group_gv_4" src="./images/Group_gv_4.svg" />
         </div>
-        <div class="row all_nv">
+        <div class=" group_title_3 mt-5 ">
+            <h2 class="title_dongugv "> <span class="title_dongugv_1">ĐỘI NGŨ</span> <span class="title_dongugv_2">GIÁO
+                    VIÊN</span> </h2>
+            <p class="title_dongugv2 content_gv text-center"> Đội ngũ giáo viên là một nhân tố quan trọng trong <br>
+                việc tạo nên sự
+                thành
+                công trong chất lượng đào tạo của trường </p>
+        </div>
+        <div class="row g-0 all_nv">
+
             <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
+                <div class="center_">
+                    <div class="row group_doingu ">
+                        <div class="col-lg-6">
+                            <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
+                        </div>
+                        <div class="col-lg-6 content_doingu  ">
+                            <p class="staff_name">Richard Scecina</p>
+                            <p class="position_staff">Giáo viên IELTS</p>
+                            <p>Kinh nghiệm: 10+ năm</p>
+                            <p>Thạc sĩ - Đại học Birmingham, Anh quốc</p>
+
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
+                <div class="center_">
+                    <div class="row group_doingu ">
+                        <div class="col-lg-6">
+                            <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
+                        </div>
+                        <div class="col-lg-6 content_doingu  ">
+                            <p class="staff_name">Richard Scecina</p>
+                            <p class="position_staff">Giáo viên IELTS</p>
+                            <p>Kinh nghiệm: 10+ năm</p>
+                            <p>Thạc sĩ - Đại học Birmingham, Anh quốc</p>
+
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
+                <div class="center_">
+                    <div class="row group_doingu ">
+                        <div class="col-lg-6">
+                            <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
+                        </div>
+                        <div class="col-lg-6 content_doingu  ">
+                            <p class="staff_name">Richard Scecina</p>
+                            <p class="position_staff">Giáo viên IELTS</p>
+                            <p>Kinh nghiệm: 10+ năm</p>
+                            <p>Thạc sĩ - Đại học Birmingham, Anh quốc</p>
+
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
-                </div>
-            </div>
-            <div class="col-lg-5">
-                <div class="group_doingu">
-                    <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
+                <div class="center_">
+                    <div class="row group_doingu ">
+                        <div class="col-lg-6">
+                            <img class="img_doingu_all" src="./images/doingu_hp.jpg" />
+                        </div>
+                        <div class="col-lg-6 content_doingu  ">
+                            <p class="staff_name">Richard Scecina</p>
+                            <p class="position_staff">Giáo viên IELTS</p>
+                            <p>Kinh nghiệm: 10+ năm</p>
+                            <p>Thạc sĩ - Đại học Birmingham, Anh quốc</p>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
