--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
     <link href="https://fslightbox.com/css/app.css?v=1683489185491" rel="stylesheet">
     <link href="https://fslightbox.com/css/c/p2e.css" rel=stylesheet>
     <link href="https://fslightbox.com/css/c/code.css" rel=stylesheet>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/layouts/layout101/js/lightbox2-2.11.4/dist/css/lightbox.min.css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
     <link href="./css/about.css" rel=stylesheet>
     <link href="./css/giaovien.css" rel=stylesheet>
     <link href="./fonts/fontawesome-free-6.4.2-web/css/all.min.css" rel=stylesheet>
@@ -87,7 +94,7 @@
                     </div>
                     <div class="content ">
                         <img class="Group41_about" src="./images/Group41_about.svg" />
-                        <p class="text-start">
+                        <p class="text-start content_gv">
                             Năm học 2024-2025 là năm học thứ 29 của trường THPT Phan Bội Châu. Nhà trường đã có 28 khoá
                             học sinh ra trường với tỷ lệ 100% đỗ tốt nghiệp THPT và trên 90% đỗ vào các trường Đại học.
                             Nhà trường được trao giải thưởng Chất lượng vàng Thủ đô năm 2012 về chất lượng giáo dục.
@@ -149,7 +156,7 @@
                     <h2 class="title_4 "> HÌNH THÀNH </h2>
                 </div>
                 <div class="content text_content_2">
-                    <p class="text-start ">
+                    <p class="text-start content_gv">
                         Trường THPT Phan Bội châu được thành lập ngày 02/7/1996 theo quyết định số 2194/QĐ-UB của UBND
                         thành phố Hà Nội.
 
@@ -178,7 +185,7 @@
         </div>
         <div class="row mt_pc">
             <div class="col-lg-6">
-                <div class="text-start group_title_1">
+                <div class=" group_title_1 ls">
                     <h2 class="title_7 "> MỤC TIÊU </h2>
                     <h2 class="title_8 "> PHƯƠNG CHÂM </h2>
                     <h2 class="title_9 "> TRONG QUÁ TRÌNH ĐÀO TẠO </h2>
@@ -190,7 +197,7 @@
                             autoplay></lottie-player>
                     </div>
                     <div class="col-7 mt-5 didong">
-                        <p class="text_content_3">
+                        <p class="text_content_3 content_gv text-start">
                             Từ khi thành lập, nhà trường chỉ đạo mọi hoạt động dạy và học trong nhà trường để đạt
                             mục tiêu
                             xây dựng trường THPT Phan Bội Châu thành trường
@@ -207,7 +214,7 @@
                             autoplay></lottie-player>
                     </div>
                     <div class="col-7 mt-5 didong">
-                        <p class="text_content_3">
+                        <p class="text_content_3 content_gv text-start">
                             Phương châm đào tạo của nhà trường:
                         </p>
                         <h6 class="text_content_5"> THẦY GIỎI - TRÒ NGOAN</h6>
@@ -218,8 +225,10 @@
             </div>
             <div class="col-lg-6">
                 <div class="col-lg-6">
+                    <div class="ttnt_b">
+                        <img class="rectangle_2" src="./images/about_2.jpg" />
 
-                    <img class="rectangle_2" src="./images/about_2.jpg" />
+                    </div>
                     <img class="Polygon2" src="./images/Polygon1.svg" />
 
                 </div>
@@ -244,6 +253,7 @@
             <div class="col-lg-6">
 
                 <img class="rectangle_3" src="./images/csvc.jpg" />
+
                 <img class="Polygon1" src="./images/Polygon1.svg" />
 
             </div>
@@ -253,14 +263,16 @@
                     <h2 class="title_11 "> KHUÔN VIÊN </h2>
                 </div>
                 <div class="content_csvc text-end">
-                    <p class="text-start content_csvc_1 ">
+                    <p class="text-start content_csvc_1 content_gv">
                         Trường THPT Phan Bội Châu nằm trong khuôn viên nhiều cây xanh rộng gần 5.000m2 tại Khu đô thị
                         Văn Quán, Hà Đông, Hà Nội.
                     </p>
                 </div>
                 <div class="row">
                     <div class="col-lg-6 mt-5">
-                        <p class="content_csvc_2">Trường sở hữu 40 phòng học, 10 phòng chức năng rộng rãi, khang
+                        <p class="content_csvc_2 content_gv text-start">Trường sở hữu 40 phòng học, 10 phòng chức năng
+                            rộng rãi,
+                            khang
                             trang, nhiều ánh sáng với đầy
                             đủ tiện ích và các trang thiết bị dạy học tiên tiến, hiện đại. Hệ thống sân chơi đa dạng bao
                             gồm sân bóng đá, sân bóng rổ, sân cầu lông, nhà đa năng … tạo ra môi trường an toàn vui vẻ
@@ -268,9 +280,11 @@
                         </p>
                     </div>
                     <div class="col-lg-6" style="margin-top: -25px; ">
+
                         <lottie-player class="lottie3" src="./images/Animation.json" background="transparent" speed="1"
                             style="width: 250px; height: 250px;" direction="1" mode="normal" loop
                             autoplay></lottie-player>
+
                     </div>
                 </div>
             </div>
@@ -292,7 +306,7 @@
         </div>
         <div class="row tt_nt">
             <div class="col-lg-6">
-                <div class="text-start title_muctieu">
+                <div class=" title_muctieu">
                     <div class="row">
                         <div class="col-lg-10">
                             <h2 class="title_7 "> THÀNH TÍCH </h2>
@@ -305,7 +319,9 @@
                 </div>
                 <div class="content_ttnt">
 
-                    <p>Nhà trường đã có 28 khoá học sinh ra trường với tỷ lệ 100% đỗ tốt nghiệp THPT, trên 90% đỗ vào
+                    <p class="text-start content_gv">Nhà trường đã có 28 khoá học sinh ra trường với tỷ lệ 100% đỗ tốt
+                        nghiệp THPT,
+                        trên 90% đỗ vào
                         các trường Đại học trong nước và nhiều học sinh đã giành các suất học bổng từ các trường Đại học
                         nước ngoài.<br>
                         <br>
@@ -321,7 +337,7 @@
 
             </div>
             <div class="col-lg-6">
-                <div class="">
+                <div class="ttnt_b">
                     <img class="ttnt" src="./images/ttnt.jpg" />
                 </div>
             </div>
